--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,35 +1,438 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
-</head>
-<body>
-  <div class="container">    
-    <label for="video">Choose a profile picture:</label>
+{% extends "index.html" %}
 
-    <input type="file"
-           id="video" name="video"
-           accept="video/*">
-    <div class="container">
-        <progress id="progress" value="0"></progress>
-        <button id="button">Start uploading</button>
-        <span id="display"></span>
+{% block head %}
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
+<link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+
+{%endblock head %}
+
+{% block navbar %}
+<!-- Bulma player -->
+<nav class="nav has-shadow" id="top">
+  <div class="container">
+    <div class="nav-left">
+      <a class="nav-item" href="../index.html">
+        <img src="https://dansup.github.io/bulma-templates/images/bulma.png" alt="Description">
+      </a>
+      <p class="control has-addons searchbox">
+        <input class="input" type="text" placeholder="Search videotube...">
+        <a class="button is-dark">
+        &nbsp; <i class="fa fa-search"></i> &nbsp; 
+        </a>
+      </p>
+    </div>
+    <span class="nav-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </span>
+    <div class="nav-right nav-menu">
+      <span class="nav-item">
+      <a class="button is-default is-bold" id="open_upload">
+        Upload
+      </a>
+      </span>
+      <a class="nav-item is-tab">
+        <i class="fa fa-bell-o"></i>
+      </a>
+      <a class="nav-item is-tab">
+        <img src="https://placehold.it/64x64" class="avatar-photo">
+      </a>
+    </div>
+  </div>
+</nav>
+
+{% endblock navbar %}
+
+{% block content %}
+<body>
+  <div class="spacer"></div>
+  <div class="container">
+    <div class="columns">
+      <div class="column is-8">
+        <div class="image">
+          <img src="https://placehold.it/800x500">
+        </div>
+        <br>
+        <div class="box video-meta">
+          <div class="video-title">A video title would go here</div>
+          <br>
+          <div class="container">
+
+            <video controls width="250">
+        
+              <source src="{{file}}"
+                    type="video/mp4">
+        
+              Sorry, your browser doesn't support embedded videos.
+            </video>
+          </div>
+          <br />
+          <article class="media">
+            <div class="media-left">
+              <figure class="image is-64x64">
+                <img src="http://placehold.it/128x128" alt="Image">
+              </figure>
+            </div>
+            <div class="media-content">
+              <div class="content">
+                <div class="columns">
+                  <div class="column is-6">
+                    <p>
+                      <strong>jsmith</strong>
+                      <br>
+                      <a href="#" class="button is-danger">Subscribe</a>
+                    </p>
+                  </div>
+                  <div class="column is-6">
+                    <nav class="nav">
+                      <div class="container">
+                        <div class="nav-right">
+                          <a class="nav-item is-tab is-active">
+                            <span class="title is-4">124 304 views</span>
+                          </a>
+                        </div>
+                      </div>
+                    </nav>
+                  </div>
+
+                </div>
+                <nav class="level">
+                  <p class="level-item has-text-left">
+                    <a class="button is-default">
+                      <span class="icon"><i class="fa fa-plus"></i></span> <span>Add to</span>
+                    </a>
+                    <a class="button is-default">
+                      <span class="icon"><i class="fa fa-share"></i></span> <span>Share</span>
+                    </a>
+                    <a class="button is-default">
+                      <span class="icon"><i class="fa fa-ellipsis-h"></i></span> <span>More</span>
+                    </a>
+                  </p>
+                  <p class="level-item has-text-right">
+                    <a class="button is-default"><i class="fa fa-thumbs-up"></i> 5254</a>
+                    <a class="button is-default"><i class="fa fa-thumbs-down"></i> 1</a>
+                  </p>
+                </nav>
+              </div>
+            </div>
+          </article>
+        </div>
+        <div class="box video-description">
+          <p><strong>Uploaded on August 1, 2016</strong></p>
+          <p>Lorum ipsum and friends at MTV unplugged playing Long May You Run.</p>
+          <hr>
+          <p class="has-text-centered has-text-muted video-description-more">Show More</p>
+        </div>
+        <div class="box">
+          <article class="media">
+            <figure class="media-left">
+              <p class="image is-64x64">
+                <img src="http://placehold.it/128x128">
+              </p>
+            </figure>
+            <div class="media-content">
+              <p class="control">
+                <textarea class="textarea" placeholder="Add a comment..."></textarea>
+              </p>
+              <nav class="level">
+                <div class="level-left">
+                  <div class="level-item">
+                    <a class="button is-info">Post comment</a>
+                  </div>
+                </div>
+                <div class="level-right">
+                  <div class="level-item">
+                    <label class="checkbox">
+                      <input type="checkbox"> Press enter to submit
+                    </label>
+                  </div>
+                </div>
+              </nav>
+            </div>
+          </article>
+          <hr>
+          <article class="media">
+            <figure class="media-left">
+              <p class="image is-64x64">
+                <img src="http://placehold.it/128x128">
+              </p>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Barbara Middleton</strong> <small> · 3 hrs</small>
+                  <br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta eros lacus, nec ultricies elit blandit non. Suspendisse pellentesque mauris sit amet dolor blandit rutrum. Nunc in tempus turpis.
+                  <br>
+                  <small><a>Like</a> · <a>Reply</a></small>
+                </p>
+              </div>
+            </div>
+          </article>
+          <div class="spacer"></div>
+          <article class="media">
+            <figure class="media-left">
+              <p class="image is-64x64">
+                <img src="http://placehold.it/128x128">
+              </p>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Barbara Middleton</strong> <small> · 3 hrs</small>
+                  <br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta eros lacus, nec ultricies elit blandit non. Suspendisse pellentesque mauris sit amet dolor blandit rutrum. Nunc in tempus turpis.
+                  <br>
+                  <small><a>Like</a> · <a>Reply</a></small>
+                </p>
+              </div>
+            </div>
+          </article>
+          <div class="spacer"></div>
+          <article class="media">
+            <figure class="media-left">
+              <p class="image is-64x64">
+                <img src="http://placehold.it/128x128">
+              </p>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Barbara Middleton</strong> <small> · 3 hrs</small>
+                  <br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta eros lacus, nec ultricies elit blandit non. Suspendisse pellentesque mauris sit amet dolor blandit rutrum. Nunc in tempus turpis.
+                  <br>
+                  <small><a>Like</a> · <a>Reply</a></small>
+                </p>
+              </div>
+            </div>
+          </article>
+          <div class="spacer"></div>
+          <article class="media">
+            <figure class="media-left">
+              <p class="image is-64x64">
+                <img src="http://placehold.it/128x128">
+              </p>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Barbara Middleton</strong> <small> · 3 hrs</small>
+                  <br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta eros lacus, nec ultricies elit blandit non. Suspendisse pellentesque mauris sit amet dolor blandit rutrum. Nunc in tempus turpis.
+                  <br>
+                  <small><a>Like</a> · <a>Reply</a></small>
+                </p>
+              </div>
+            </div>
+          </article>
+          <div class="spacer"></div>
+          <article class="media">
+            <figure class="media-left">
+              <p class="image is-64x64">
+                <img src="http://placehold.it/128x128">
+              </p>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Barbara Middleton</strong> <small> · 3 hrs</small>
+                  <br>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta eros lacus, nec ultricies elit blandit non. Suspendisse pellentesque mauris sit amet dolor blandit rutrum. Nunc in tempus turpis.
+                  <br>
+                  <small><a>Like</a> · <a>Reply</a></small>
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+      <div class="column is-4">
+        <div class="box related-list">
+          <p class="autoplay">
+            <span class="autoplay-title">Up next</span>
+            <span class="autoplay-toggle">
+              Autoplay
+              <i class="fa fa-info-circle"></i>
+            </span>
+          </p>
+          <article class="media related-card">
+            <div class="media-left">
+              <figure class="image">
+                <img src="http://placehold.it/120x90" alt="Image">
+              </figure>
+            </div>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <span class="video-title">A video title</span>
+                  <span class="video-account">asasdas</span>
+                  <span class="video-views">239 views</span>
+                </p>
+              </div>
+            </div>
+          </article>
+          <hr>
+          <article class="media related-card">
+            <div class="media-left">
+              <figure class="image">
+                <img src="http://placehold.it/120x90" alt="Image">
+              </figure>
+            </div>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <span class="video-title">A video title</span>
+                  <span class="video-account">asasdas</span>
+                  <span class="video-views">239 views</span>
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="media related-card">
+            <div class="media-left">
+              <figure class="image">
+                <img src="http://placehold.it/120x90" alt="Image">
+              </figure>
+            </div>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <span class="video-title">A video title</span>
+                  <span class="video-account">asasdas</span>
+                  <span class="video-views">239 views</span>
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="media related-card">
+            <div class="media-left">
+              <figure class="image">
+                <img src="http://placehold.it/120x90" alt="Image">
+              </figure>
+            </div>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <span class="video-title">A video title</span>
+                  <span class="video-account">asasdas</span>
+                  <span class="video-views">239 views</span>
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="media related-card">
+            <div class="media-left">
+              <figure class="image">
+                <img src="http://placehold.it/120x90" alt="Image">
+              </figure>
+            </div>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <span class="video-title">A video title</span>
+                  <span class="video-account">asasdas</span>
+                  <span class="video-views">239 views</span>
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="media related-card">
+            <div class="media-left">
+              <figure class="image">
+                <img src="http://placehold.it/120x90" alt="Image">
+              </figure>
+            </div>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <span class="video-title">A video title</span>
+                  <span class="video-account">asasdas</span>
+                  <span class="video-views">239 views</span>
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="container">
-
-    <video controls width="250">
-  
-      <source src="{{file}}"
-              type="video/mp4">
-  
-      Sorry, your browser doesn't support embedded videos.
-  </video>
+  <!-- Modal Sing In -->
+<div class="modal" id="modal_upload">
+  <div class="modal-background" id="modal_background_upload"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p class="modal-card-title">Upload your items</p>
+      <button class="delete" id="close_modal_upload" aria-label="close"></button>
+    </header>
+    <section class="modal-card-body">
+    <div class="row">
+    <div class="columns">
+      <div class="column">
+      <div class="file has-name is-boxed">
+        <label class="file-handler">
+          <input class="file-input" type="file"id="video" accept="video/*">
+          <span class="file-cta">
+            <span class="file-icon">
+              <i class="fas fa-upload"></i>
+            </span>
+            <span class="file-label">
+              Choose a video...
+            </span>
+          </span>
+          <span class="file-name">
+            Screen Shot 2017-07-29 at 15.54.25.png
+          </span>
+        </label>
+      </div>
+      </div>
+      <div class="column">
+      <div class="file has-name is-boxed">
+        <label class="file-handler">
+          <input class="file-input" type="file"id="image" accept="image/*">
+          <span class="file-cta">
+            <span class="file-icon">
+              <i class="fas fa-upload"></i>
+            </span>
+            <span class="file-label">
+              Choose an image
+            </span>
+          </span>
+          <span class="file-name">
+            Screen Shot 2017-07-29 at 15.54.25.png
+          </span>
+        </label>
+      </div>
+    </div>
   </div>
-  <script type="text/javascript" src="{{ url_for('static', filename='profile.js') }}"></script>
-</body>
+  </div>
+      <!-- Content -->        
+
+   <footer class="modal-card-foot">           
+      <div class="field is-grouped">
+          <div class="control">
+            <div class="container">
+              <progress id="progress" value="0"></progress>
+              <button id="button">Start uploading</button>
+              <span id="display"></span>
+            </div>          
+          </div>
+      </div>
+    </footer>
+
+  </section>
+  </div>
+</div>
+
+  {% block script %}
+  <script type="text/javascript" src="{{ url_for('static', filename='js/profile.js') }}"></script>
+  {% endblock script %}
+
+{% endblock content %}
+
+
 </html>
